--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "mineflayer": "^4.6.0",
     "express": "^4.18.2",
-    "axios": "^1.6.7"
+    "socket.io": "^4.7.2"
   }
 }
