--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name": "herobrine-afk",
   "version": "1.0.0",
+  "description": "Minecraft bot that haunts your server.",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.10.0",
-    "express": "^4.18.2",
-    "minecraft-protocol": "^1.29.0",
-    "mineflayer": "^4.6.0",
-    "socket.io": "^4.7.2"
+    "discord.js": "^14.21.0",
+    "dotenv": "^17.2.0",
+    "express": "^4.21.2",
+    "mineflayer": "^4.30.0"
+  },
+  "author": "SingedBeet",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/YourUsername/HerobrineAFK.git"
   }
 }
